# Zephyr-RTOS-Notes

./: Board Simulation Using Renode.md  README.md  Zephyr - Basics.md  Zephyr - Custom Board Support.md  Zephyr - Device Tree Basics.md  Zephyr - Device Tree Practice.md  Zephyr - Device Tree Semantics.md  Zephyr - Kconfig.md  Zephyr - Timers, Counters, and Interrupts.md  Zephyr - West Workspaces.md  Zephyr vs. FreeRTOS.md
examples/adc_demo/: CMakeLists.txt  README.md
examples/adc_demo/boards/: stm32f4_disco.overlay
examples/boards/: README.md
examples/button_demo/: CMakeLists.txt
examples/button_demo/src/: main.c
examples/counter_interrupt_demo/: CMakeLists.txt
examples/custom_board_demo/: CMakeLists.txt  README.md
examples/device_driver_demo/: CMakeLists.txt  prj.conf
examples/device_driver_demo/.cache/clangd/index/: main.c.874B6158649C94ED.idx
examples/device_driver_demo/boards/: stm32f4_disco.overlay
examples/device_driver_demo/src/: main.c
examples/dt_practice/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  prj.conf
examples/kconfig_demo/: CMakeLists.txt  prj.conf
examples/threads_demo/: CMakeLists.txt
examples/timer_demo/: CMakeLists.txt
notes/: Board Simulation Using Renode.md  OpenOCD.md  Zephyr - ADC.md  Zephyr - Basics.md  Zephyr - Custom Board Support.md  Zephyr - Device Tree Basics.md  Zephyr - Device Tree Practice.md  Zephyr - Device Tree Semantics.md  Zephyr - Kconfig.md  Zephyr - Modules.md  Zephyr - Multithreading.md  Zephyr - Timers, Counters, and Interrupts.md  Zephyr - Writing Drivers.md  Zephyr vs. FreeRTOS.md
(+42 files in other folders)
